libs/bng/test/negative/N0101_molecule_type_matching_components.bngl
# FAIL
# OUTPUT: error: Molecule type has 2 components with name 'a' but with different states, this is not allowed.


begin molecule types
   A(a~0~1, a~P)
end molecule types
